# scale

./: setup.py
scale/: build.json  setup.py
scale-main/: package.json  pyproject.toml
scale-main/scale/public/js/: override_item_selector.js
scale/public/: dummy.css  dummy.js
scale_integration/: __init__.py  hooks.py  manifest.json
scale_integration/public/: build.json
scale_integration/public/css/: scale_integration.css
scale_integration/public/js/: scale_integration.js
scale_integration/scale_integration/: api.py  scale.py
scale_integration/scale_integration/doctype/scale_settings/: scale_settings.json  scale_settings.py
